Fixed margins on navbar, fixed FAQ section on mobile devices, added some media queries to make site more responsive

--- a/Website 2.0/Styles/dropdowns.css
+++ b/Website 2.0/Styles/dropdowns.css
@@ -9,12 +9,17 @@
 	margin: 0;
 }
 
-#faq h3{
-	font-size: 1.5vw;
+.answer {
+	text-align: left;
+	padding: 0 2vw;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.2s ease-out;
 }
 
-#faq h2{
-	font-size: 3.2vw;
+.answer p {
+	padding: 2vw 0;
+	text-align: left;
 }
 
 .question {
@@ -46,3 +51,7 @@
 	padding: 2vw 0;
 	text-align: left;
 }
+
+
+
+
