--- a/Website 2.0/Styles/template.css
+++ b/Website 2.0/Styles/template.css
@@ -55,6 +55,13 @@ body {
   background-color: rgba(0,0,0,0.5);
   margin-bottom: 15%;
   width: 80vw;
+
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+
 }
 .intro h1 {
   font-size: 5rem;
@@ -94,7 +101,7 @@ footer div {
 }
 
 #faq{
-	padding-top: 5vh;
+	padding-top: 10vh;
 	padding-bottom: 5vh;
 }
 
@@ -112,12 +119,8 @@ footer img {
 
 #slideshow-down-arrow {
 	position: absolute;
-    margin-right: auto;
-    margin-left: auto;
-    left: 0;
-    right : 0;
-    bottom: 0;
-	margin-bottom: 8vw;
+    margin: auto;
+    bottom: 20px;
 	opacity: 1;
 }
 
@@ -125,7 +128,6 @@ footer img {
 	text-align: center;
 	margin-left: auto;
   	margin-right: auto;
-  	margin-top: 10%;
 	padding-bottom: 1%;
 	opacity: 0.5;
 }
@@ -195,4 +197,68 @@ header > hr{
 
 #active-link{
 	color: rgba(255, 255, 255, 0.349);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 600px) {
+
+	.person-row .person {
+		text-align: center;
+		width: 100%;
+		display: block;
+	}
+
+	.person-row .person img {
+		width: 50%;
+	}
+}
+
+#our-team {
+	padding-top: 10vh;
+	text-align: center;
+}
+
+#our-team h5, p {
+	margin: 0;
+}
+
+.person-row, .person-council {
+	text-align: center;
+}
+
+.person-row div {
+	vertical-align: text-top;
+	width: 20%;
+	display: inline-block;
+	padding: 2vh 0;
+}
+
+.person img {
+	width: 75%;
+}
+
+.person-council div {
+	width: 100%;
+	padding: 2vh 0;
+}
+
+.person-council img {
+	height: 15vh;
 }
